--- a/content/blog/2020-08-17-demokratisera-databaser-med-r.Rmd
+++ b/content/blog/2020-08-17-demokratisera-databaser-med-r.Rmd
@@ -50,7 +50,11 @@ dbWriteTable(con, "iris", iris)
 iris_tbl <- tbl(con, "iris")
 ```
 
-Objektet `iris_tbl` är nu en koppling till tabellen `iris` i databasen `con`. Det här är det enda som behövs för att kunna använda `dplyr` för att bearbeta data i databasen.
+Objektet `iris_tbl` är nu en koppling till tabellen `iris` i databasen `con`. Vi kan också titta igenom våra databasobjekt under `Connections` i RStudio. 
+
+![](/blog/2020-08-17-demokratisera-databaser-med-r_files/connections.png)
+
+När vi nu har en databas kan vi använda `dplyr` för att bearbeta data i databasen. 
 
 ```{r}
 iris_tbl %>% 
